<resources>
    <string name="app_name">DawsonLPx3</string>
    <string name="menu_settings"> Settings</string>
    <string name="save_settings">Save</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email address:</string>
    <string name="password_label">Password:</string>
    <string name="last_modified_label">Last Modified:</string>
    <string name="menu_about">About</string>
    <string name="menu_dawson">Dawson website</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="office">Office</string>
    <string name="email">Email</string>
    <string name="course">Course</string>
    <string name="password">Password</string>
    <string name="findTeacher">Find Teacher</string>
    <string name="search">Search</string>
    <string name="like">Like</string>
    <string name="exact">Exact</string>
    <string name="teachers">Teachers</string>
    <string name="teacherInfo">Teacher Information</string>
    <string name="sampleName">Sample Name</string>
    <string name="local">Local</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="image">Image</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="sector">Sector</string>
    <string name="acedemicCalendar">Academic Calendar</string>
    <string name="year">year</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="classCancel">Class Cancellation</string>
    <string name="time">Time</string>
    <string name="courseSection">Course / Section</string>
    <string name="title">Title</string>
    <string name="teacher">Teacher</string>
    <string name="login_error_title">Something went wrong with the database. Cannot retrieve information.</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_classCancel">Class Cancellation</string>
    <string name="nav_findTeacher">Find Teacher</string>
    <string name="nav_addToCalendar">Add to Calendar</string>
    <string name="nav_acedemicCalendar">Academic Calendar</string>
    <string name="nav_note">Note</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_findfriends">Find Friends</string>
    <string name="register">Register</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="addToCalendar">Add To Calendar</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="submit">Submit</string>
    <string name="pickADate">Please pick a date!</string>
    <string name="startBeforeEnd">Start time must be before end time!</string>
    <string name="hello_world">Hello world!</string>
    <string name="completeThisField">Please complete this field!</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="delete">Delete</string>
    <string name="deleteQuestion">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="insertToCalendar">Inserted to calendar!</string>
    <string name="cantAddToCalendar">Can\'t add to calendar!</string>

    <string name="invalidTeacherSearch">Please enter at least a first name or a last name</string>
    <string name="dawsonPhoneNum">15149318731</string>
    <string name="callRequest">You request to call a teacher</string>
    <string name="phone_access_required">Phone access is required to call a teacher.</string>
    <string name="permission_unavailable">"Permission is not available. Requesting call permission."</string>
    <string name="permission_granted">"Phone permission was granted. Starting phone call."</string>
    <string name="permission_denied">Phone call permission request was denied.</string>
    <string name="unavailable">Unavailable</string>
    <string name="noresult">No teachers found</string>
    <string name="from">From DawsonLPx3</string>
    <string name="searchTeachers">Searching teachers...</string>
    <string name="noteDetail">Note Detail</string>
    <string name="fallurl">fall</string>
    <string name="winterurl">winter</string>
    <string name="academicurl">https://www.dawsoncollege.qc.ca/registrar/</string>
    <string name="bad_year">Please enter a valid year</string>
    <string name="loading_calendar">Loading calendar...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempDisabled">The temperature cannot be shown at this time.</string>
    <string name="montreal">Montreal</string>
    <string name="forecast_text">Get Forecast</string>
    <string name="temp">Temperature: </string>
    <string name="temp_min">Min: </string>
    <string name="temp_max">Max: </string>
    <string name="pressure">Pressure(hpa): </string>
    <string name="sea_level">Sea Level: </string>
    <string name="grnd_level">Ground Level: </string>
    <string name="humidity">Humidity(%): </string>
    <string name="kf_temp">Kf Temp: </string>
    <string name="weather_main">Weather: </string>
    <string name="weather_description">Description: </string>
    <string name="weather_clouds">Clouds(%): </string>
    <string name="wind_speed">Wind Speed(m/s): </string>
    <string name="wind_deg">Wind Deg: </string>
    <string name="cancel_settings_title">Cancel Changes of Settings?</string>
    <string name="cancel_settings_body">Are you sure you want to leave without saving?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_weather">That city/country combination is invalid.</string>
    <string name="About">About DawsonLPx3</string>
    <string name="our_app">Our App</string>
    <string name="app_description">Our application is intended for new and current Dawson college students.
     Our application provides students various features that can be useful to them during
     their stay at Dawson. Examples of functionality of our app includes the possibility of viewing your cancelled classes
     for the day, find teachers by their first and/or last name. Our app lets students view the academic calendar of a
        Winter or Fall semester of a year and the weather of the day and the next five days. Other useful features of our app is the ability to store notes and to save events into their calendar.

    \n\n - Credit to Andreea for the design of our team logo and app icon!
    </string>
    <string name="courseid">Dawson College 420.A0</string>
    <string name="meet_team">Meet The Team</string>
    <string name="lyrene">Lyrene Labor</string>
    <string name="lyrene_des">Hi, my name is Lyrene. I am currently studying in Computer Science at Dawson College and two things
    I love the most in this world is coding and food!</string>
    <string name="peng">Pengkim Sy</string>
    <string name="peng_des">I\'m an aspiring coder who travelled all the way from Cambodia to Canada to study
        and become a programmer. I can\'t wait to graduate and start creating innovations!</string>
    <string name="phil">Phil Langlois</string>
    <string name="phil_des">Got bored studying Physics at Concordia, so I decided to spent my time  on the computer more wisely.</string>
    <string name="peter">Peter Bellefleur</string>
    <string name="peter_des">Howdy! I have a passion for mathematics, technology, and writing, so I
        decided to combine my passions and learn software development. Let\'s create beautiful
        things together!</string>
    <string name="blurb_title">About</string>
    <string name="dismiss">OK</string>
    <string name="connection_error">There was a problem connecting to Dawson\'s RSS feed or Could not parse RSS feed..</string>
    <string name="xml_error">Could not parse RSS feed.</string>
    <string name="empty_list_error">No cancelled classes found!</string>
    <string name="empty_teacher_error">No teacher name was given in this summary.</string>
    <string name="friends_on_break_btn_text">Find Friends on Break</string>
    <string name="your_friends">Your Friends</string>
    <string name="day">Day</string>
    <string name="locationOf">Location of</string>
    <string name="section">Section</string>
    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="search_times">
        <item>1000</item>
        <item>1030</item>
        <item>1100</item>
        <item>1130</item>
        <item>1200</item>
        <item>1230</item>
        <item>1300</item>
        <item>1330</item>
        <item>1400</item>
        <item>1430</item>
        <item>1500</item>
        <item>1530</item>
        <item>1600</item>
        <item>1630</item>
        <item>1700</item>
    </string-array>
    <string name="invalid_time_interval">That time interval is Invalid</string>
    <string name="break_null">Problem retrieving your friends</string>
    <string name="break_no_friends">No friends on break. sorry there pal.</string>
    <string name="break_invalid_creds">Invalid Credentials</string>
    <string name="warning">Warning</string>
    <string name="problem_retrieving_friends">Something went wrong! Problem retrieving friends</string>
    <string name="no_friends">You currently have no friends</string>
    <string name="problem_retrieving_location">Something went wrong! Problem retrieving friend location</string>
    <string name="invalid_creds">Invalid Credentials! Cannot retrieve your friends</string>
    <string name="not_in_class">Unknown Whereabouts, your friend may not be in class at the moment</string>
    <string name="missing_params">Bad or missing parameters. Cannot retrieve friends.</string>
    <string name="not_friends">That person is no longer your friend...</string>
    <string name="searching_teachers">Searching for teachers...</string>
    <string name="searching_friends">Searching for friends...</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="notes">Notes</string>
    <string name="cancel_problem">Problem loading cancelled classes.</string>
    <string name="friend_cancel">Your friends in class: </string>
    <string name="no_friends_cancelled">No friends are taking this class.</string>
    <string name="invalid_password">That is an invalid password pattern.</string>
    <string name="invalid_email_pattern">That is an invalid email pattern.</string>
</resources>

